# pexrc

./: .gitignore  .python-version  CHANGES.md  Cargo.toml  README.md  RELEASE.md  build.rs  cowsay.pex  pexrc.rs  pyproject.toml  rust-toolchain  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/boot/: Cargo.toml
crates/boot/src/: boot.py  boot.sh  lib.rs
crates/build-system/: Cargo.toml
crates/build-system/src/: downloads.rs  lib.rs  metadata.rs  rust_toolchain.rs  tools.rs
crates/cache/: Cargo.toml
crates/cache/src/: atomic.rs  fingerprint.rs  key.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/clib/: Cargo.toml
crates/clib/src/: lib.rs
crates/interpreter/: Cargo.toml  build.rs
crates/interpreter/src/: constraints.rs  interpreter.py  interpreter.rs  lib.rs  linux.rs  platform.rs  search_path.rs  tag.rs  version.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/package/: Cargo.toml
crates/package/src/: main.rs
crates/pex/: Cargo.toml
crates/pex-info/: Cargo.toml
crates/pex-info/src/: lib.rs
crates/pex/src/: dependency_configuration.rs  lib.rs  pex.rs  pex_info.rs  pex_path.rs  wheel.rs
crates/pex/src/wheel/: entry_points.rs  file.rs  layout.rs  metadata.rs  mod.rs  original_wheel_info.rs  package.rs  record.rs
crates/pexrc-build-system/: Cargo.toml
crates/pexrc-build-system/src/: config.rs  downloads.rs  lib.rs  metadata.rs  rust_toolchain.rs  tools.rs
crates/pexrs/: Cargo.toml
crates/pexrs/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  unix.rs  windows.rs
crates/python/: Cargo.toml  build.rs
crates/python-proxy/: Cargo.toml
crates/python-proxy/src/: lib.rs  main.rs
crates/python/src/: embedded.rs  lib.rs
crates/request/: Cargo.toml
crates/request/src/: lib.rs
crates/reqwest/: Cargo.toml
crates/resources/: Cargo.toml
crates/resources/src/: embedded.rs  lib.rs  venv-pex.py
crates/scripts/: Cargo.toml  build.rs
crates/scripts/src/: interpreter.py  lib.rs  venv-pex-repl.py  venv-pex.py
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: info.rs  json.rs  lib.rs  output.rs  resolve.rs
crates/tools/src/commands/: extract.rs  graph.rs  info.rs  interpreter.rs  mod.rs  repository.rs  venv.rs
crates/tools/src/commands/repository/: extract.rs  info.rs  mod.rs
python/pexrc/: __init__.py
python/scripts/: run-tests.py
python/testing/: __init__.py  compare.py  zipfile.py
python/tests/: conftest.py  test_bind_resource_paths.py  test_boot.py  test_console_scripts.py  test_create_script.py  test_deps_are_wheel_files.py  test_extras_handling.py  test_issue_103.py  test_overrides_and_excludes.py  test_pex_path.py  test_pexrc_boot.py  test_python_args.py  test_user_sources.py  test_venv_tool.py
scripts/: generate-release-hashes.py  prepare-venv-activation-scripts.py
src/: .gitattributes  boot.sh  clibs.rs  embeds.rs  lib.rs  pexrc.rs  sh_boot.rs  source.rs
src/commands/: extract.rs  info.rs  inject.rs  mod.rs  repackage.rs  script.rs
