# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    ".",
    "crates/clib",
    "crates/interpreter",
    "crates/pex-info",
    "crates/pexrc-build-system",
    "crates/pexrs",
]

[package]
name = "pexrc"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.build]
zig_version = "0.15.2"

[package.metadata.build.cargo_binstall]
version = "1.17.4"
artifacts = [
    # N.B.: We don't cover all our targets here. If you develop on an un-covered target, we'll just
    # run: `cargo install --locked cargo_binstall@<version>`. The only drawback is that's pretty
    # slow compared to downloading a pre-built binary.
    { target = "arch64-apple-darwin", type = "zip", size = 7094752, hash = "sha256:c689061413598fa32b77b6fd2a7300c6392faf008137194ab8a4cdb93c12040a"},
    { target = "aarch64-pc-windows-msvc", type = "zip", size = 6955036, hash = "sha256:6096f3a5da155fcf06f5fe48ee86a0b40427e48d0abb7206e2bc54572f875400"},
    { target = "aarch64-unknown-linux-gnu", type = "tgz", size = 7564244, hash = "sha256:d0e901a56fbcf5ef20d488fcf069b48d3841c07a8a7b713ca5639d32a6da13a5"},
    { target = "aarch64-unknown-linux-musl", type = "tgz", size = 7558045, hash = "sha256:1410ec72b4f23fa6cf8ebb4b55fe03ebca63e14adadf4501d78e91fa004e9689"},
    { target = "armv7-unknown-linux-gnueabihf", type = "tgz", size = 7279373, hash = "sha256:ff488200a04d2ee8d8cbe024b7347158e9835cbdf5677ff4a0a1b91df36d7dad"},
    { target = "x86_64-apple-darwin", type = "zip", size = 7738226, hash = "sha256:278a12a049397b9f73df0c1e6c83c15fe184e3f5d824ee9a66460c41e519cfd6"},
    { target = "x86_64-pc-windows-msvc", type = "zip", size = 7200526, hash = "sha256:9c6df6ed7e0eef153fdd6aa0fe0c873496431ea44e2b209331b2dbd29d0d3c06"},
    { target = "x86_64-unknown-linux-gnu", type = "tgz", size = 8066818, hash = "sha256:556d8572395a50e7a85bface1ab1025fb23856d2221e1207ec3c16a32331891f"},
    { target = "x86_64-unknown-linux-musl", type = "tgz", size = 8053450, hash = "sha256:8822793dd22a1fcfba6d7581ed130ec935fb26a0db58fb9b0f01f0fae17d28f8"},
]

[package.metadata.build.clib]
profile = "release-clib"
compression_level = 19

# The glibc release timeline for reference: https://sourceware.org/glibc/wiki/Glibc%20Timeline
[package.metadata.build.glibc]
# N.B.: 2.17 if the lowest glibc supported by zig 0.15.2 and this nets us manylinux_2014
# compatibility: https://peps.python.org/pep-0599/
default_version = "2.17"  # Released: 2012-12-25

[package.metadata.build.glibc.by_platform]
# N.B.: These were determined by bisecting to clean builds.
powerpc64le-unknown-linux-gnu = "2.19"  # Released: 2014-02-07
riscv64gc-unknown-linux-gnu = "2.27"  # Released: 2018-02-01

[package.metadata.build.mac_osx_sdk]
url = "https://github.com/joseluisq/macosx-sdks/releases/download/11.3/MacOSX11.3.sdk.tar.xz"
size = 57683504
fingerprint = { algorithm = "sha256", hash = "9adc1373d3879e1973d28ad9f17c9051b02931674a3ec2a2498128989ece2cb1" }
prefix = "MacOSX11.3.sdk"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[profile.release-clib]
inherits = "release"
opt-level = "s"

[[bin]]
name = "pexrc"
path = "pexrc.rs"

[workspace.dependencies]
anyhow = "1.0"
bstr = "1.12"
const_format = "0.2"
dirs = "6.0"
elf = "0.8"
env_logger = "0.11"
flate2 = "1.1"
hex = "0.4"
include_dir = "0.7"
itertools = "0.14"
log = "0.4"
logging_timer = "1.1"
rayon = "1.11"
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10" }
strum = { version = "0.27", features = ["strum_macros"] }
strum_macros = "*"
tar = "0.4"
tempfile = "3.25"
toml = "1.0"
which = "8.0"
xz2 = "0.1"
zip = { version = "7.4", default-features = false, features = ["deflate", "zstd"] }
zstd = "0.13"

[build-dependencies]
anyhow = { workspace = true }
bstr = { workspace = true }
pexrc-build-system = { path = "crates/pexrc-build-system" }
env_logger = { workspace = true }
itertools = { workspace = true }
zstd = { workspace = true }

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
include_dir = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
logging_timer = { workspace = true }
pexrs = { path = "crates/pexrs" }
tempfile = { workspace = true }
which = { workspace = true }
zip = { workspace = true }
