[project]
name = "pexrc"
version = "0.1.0"
requires-python = ">=2.7"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ansicolors",
    "dev-cmd[old-pythons]; python_version >= '3.8'",
    "mypy",
    "pex",
    "pytest",
    "pytest-xdist",
    "ruff",
    "types-setuptools",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.dev-cmd.commands]
fmt = ["ruff", "format"]
check-fmt = ["ruff", "format", "--diff"]

lint = ["ruff", "check", "--fix"]
check-lint = ["ruff", "check"]

[tool.dev-cmd.commands.type-check-pexrc.factors]
py = "The Python version to type check in <major>.<minor> form; i.e.: 3.13."
[tool.dev-cmd.commands.type-check-pexrc]
args = [
    "mypy",
    "--python-version", "{-py:{markers.python_version}}",
    "--cache-dir", ".mypy_cache_{markers.python_version}",
    "python",
]

[tool.dev-cmd.commands.type-check-scripts]
args = ["mypy", "scripts"]

[tool.dev-cmd.commands.generate-release-hashes]
when = "python_version >= '3.10'"
args = ["scripts/generate-release-hashes.py"]
accepts-extra-args = true

[tool.dev-cmd.commands.test]
args = ["python/scripts/run-tests.py"]
accepts-extra-args = true

[tool.dev-cmd.tasks.checks]
description = "Runs all development checks, including auto-formatting code."
steps = [
    "fmt",
    "lint",
    # Parallelizing the type checks is safe (they don't modify files), and it nets a ~3x
    # speedup over running them all serially.
    ["type-check-pexrc-py3.{8..14}", "type-check-scripts"],
    "test",
]

[tool.dev-cmd.tasks.ci]
description = "Runs all checks used for CI."
# None of the CI checks modify files; so they can all be run in parallel which nets a ~1.5x speedup.
steps = [["check-fmt", "check-lint", "type-check-pexrc", "type-check-scripts", "test"]]

[tool.dev-cmd]
default = "checks"
exit-style = "immediate"
