[project]
name = "pexrc"
version = "0.1.0"
requires-python = ">=2.7"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ansicolors",
    "build",
    "dev-cmd[old-pythons]; python_version >= '3.8'",
    "mypy",
    "pex",
    "pytest",
    "pytest-xdist",
    "ruff",
    "types-setuptools",
]

[[tool.mypy.overrides]]
module = "_pytest.*"
follow_imports = "skip"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.dev-cmd.commands]
fmt = ["ruff", "format", "crates/scripts", "python", "scripts"]
check-fmt = ["ruff", "format", "--diff", "crates/scripts", "python", "scripts"]

lint = ["ruff", "check", "--fix", "crates/scripts", "python", "scripts"]
check-lint = ["ruff", "check", "crates/scripts", "python", "scripts"]

[tool.dev-cmd.commands.type-check-pexrc.factors]
py = "The Python version to type check in <major>.<minor> form; i.e.: 3.13."
[tool.dev-cmd.commands.type-check-pexrc]
args = [
    "mypy",
    "--python-version", "{-py:{markers.python_version}}",
    "--cache-dir", ".mypy_cache_{-py:{markers.python_version}}",
    "crates/scripts",
    "python",
]

[tool.dev-cmd.commands.type-check-scripts]
args = [
    "mypy",
    "--python-version", "{markers.python_version}",
    "--cache-dir", ".mypy_cache_{markers.python_version}",
    "scripts",
]

[tool.dev-cmd.commands.generate-release-hashes]
args = ["scripts/generate-release-hashes.py"]
accepts-extra-args = true

[tool.dev-cmd.commands.prepare-venv-activation-scripts]
args = ["scripts/prepare-venv-activation-scripts.py"]
accepts-extra-args = true

[tool.dev-cmd.commands.test]
args = ["python/testing/bin/run-tests.py"]
accepts-extra-args = true

[tool.dev-cmd.tasks.checks]
description = "Runs all development checks, including auto-formatting code."
steps = [
    "fmt",
    "lint",
    # Parallelizing the type checks is safe (they don't modify files), and it nets a ~3x
    # speedup over running them all serially.
    ["type-check-pexrc-py3.{9..14}", "type-check-scripts"],
    "test",
]

[tool.dev-cmd.tasks.ci]
description = "Runs all checks used for CI."
# None of the CI checks modify files; so they can all be run in parallel which nets a ~1.5x speedup.
steps = [["check-fmt", "check-lint", "type-check-pexrc", "type-check-scripts", "test"]]

[tool.dev-cmd]
default = "checks"
exit-style = "immediate"
