# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "boot"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
const_format = { workspace = true }
fs-err = { workspace = true }
interpreter = { path = "../interpreter" }
itertools = { workspace = true }
pex = { path = "../pex" }
pexrs = { path = "../pexrs" }
platform = { path = "../platform" }
zip = { workspace = true }