# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "build-system"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
bstr = { workspace = true }
cache = { path = "../cache" }
const_format = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
fs-err = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
platform = { path = "../platform" }
serde = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tar = { workspace = true }
target = { path = "../target" }
target-lexicon = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }
which = { workspace = true }

# N.B.: We re-iterate "charset", "http2", "system-proxy" from the defaults we disabled in the
# workspace dependency. We only really need:
# 1. blocking
# 2. rustls-no-provider instead of rustls (this drops aws-lc-sys which does not cross-compile
# on macos currently)

[target.'cfg(not(target_os = "macos"))'.dependencies]
reqwest = { workspace = true, features = ["blocking", "charset", "http2", "system-proxy", "default-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { workspace = true, features = ["blocking", "charset", "http2", "system-proxy", "rustls-no-provider"] }