# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "build-system"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
bstr = { workspace = true }
cache = { path = "../cache" }
const_format = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
fs-err = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
platform = { path = "../platform" }
reqwest = { path = "../reqwest" }
serde = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tar = { workspace = true }
target = { path = "../target" }
target-lexicon = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }
which = { workspace = true }