# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cache"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
logging_timer = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }