# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cache"
edition = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
digest = { workspace = true }
dtor = { workspace = true }
fs-err = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
logging_timer = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }