# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "interpreter"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
indexmap = { workspace = true }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
elf = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
logging_timer = { workspace = true }
platform = { path = "../platform" }
python = { path = "../python" }
same-file = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[dev-dependencies]
python = { path = "../python" }
rstest = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
testing = { path = "../testing" }
textwrap = { workspace = true }