# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "interpreter"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
indexmap = { workspace = true }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
elf = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
logging_timer = { workspace = true }
platform = { path = "../platform" }
resources = { path = "../resources" }
same-file = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pep440_rs = { workspace = true }
resources = { path = "../resources" }
rstest = { workspace = true }
target-lexicon = { workspace = true }
testing = { path = "../testing" }
textwrap = { workspace = true }