# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "interpreter"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
indexmap = { workspace = true }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
elf = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
logging_timer = { workspace = true }
platform = { path = "../platform" }
same-file = { workspace = true }
scripts = { path = "../scripts" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pep440_rs = { workspace = true }
rstest = { workspace = true }
scripts = { path = "../scripts" }
target-lexicon = { workspace = true }
testing = { path = "../testing" }
textwrap = { workspace = true }