[package]
name = "package"
edition = "2024"

[dependencies]
anstream = { workspace = true }
anyhow = { workspace = true }
build-system = { path = "../build-system" }
cache = { path = "../cache" }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
colorchoice-clap = { workspace = true }
env_logger = { workspace = true }
fs-err = { workspace = true }
owo-colors = { workspace = true }
platform = { path = "../platform" }
serde_json = { workspace = true }
sha2 = { workspace = true }
