# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "package"
edition = { workspace = true }
publish = false

[dependencies]
anstream = { workspace = true }
anyhow = { workspace = true }
build-system = { path = "../build-system" }
cache = { path = "../cache" }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
cli = { path = "../cli" }
colorchoice-clap = { workspace = true }
env_logger = { workspace = true }
fs-err = { workspace = true }
owo-colors = { workspace = true }
platform = { path = "../platform" }
serde_json = { workspace = true }
sha2 = { workspace = true }
