# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pex"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
interpreter = { path = "../interpreter" }
itertools = { workspace = true }
log = { workspace = true }
logging_timer = { workspace = true }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
resources = { path = "../resources" }
python-pkginfo = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
glob = { workspace = true }
indexmap = { workspace = true }
interpreter = { path = "../interpreter" }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
resources = { path = "../resources" }
rstest = { workspace = true }
tempfile = { workspace = true }
testing = { path = "../testing" }
url = { workspace = true }
zip = { workspace = true }
