# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pex"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
interpreter = { path = "../interpreter" }
itertools = { workspace = true }
log = { workspace = true }
logging_timer = { workspace = true }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
python-pkginfo = { workspace = true }
rayon = { workspace = true }
scripts = { path = "../scripts" }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
fs-err = { workspace = true }
glob = { workspace = true }
indexmap = { workspace = true }
interpreter = { path = "../interpreter" }
pep508_rs = { workspace = true }
rstest = { workspace = true }
scripts = { path = "../scripts" }
tempfile = { workspace = true }
testing = { path = "../testing" }
url = { workspace = true }
zip = { workspace = true }
