# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pexrc-build-system"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bstr = { workspace = true }
const_format = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tar = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }
which = { workspace = true }