# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pexrs"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
fs-err = { workspace = true }
interpreter = { path = "../interpreter" }
itertools = { workspace = true }
log = { workspace = true }
logging_timer = { workspace = true }
pex = { path = "../pex" }
platform = { path = "../platform" }
regex = { workspace = true }
venv = { path = "../venv" }