# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "pexrs"
edition = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
fs-err = { workspace = true }
interpreter = { path = "../interpreter" }
itertools = { workspace = true }
log = { workspace = true }
logging = { path = "../logging" }
logging_timer = { workspace = true }
pex = { path = "../pex" }
platform = { path = "../platform" }
python-proxy = { path = "../python-proxy" }
regex = { workspace = true }
tools = { path = "../tools", optional = true}
venv = { path = "../venv" }

[features]
tools = ["dep:tools"]