# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "python-proxy"
edition = { workspace = true }
publish = false

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
pex = { path = "../pex" }
platform = { path = "../platform" }
target = { path = "../target" }
zip = { workspace = true }
