[package]
name = "python"
edition = "2024"

[features]
embedded_resources = []

[dependencies]
anyhow = { workspace = true}
strum = { workspace = true }
strum_macros = { workspace = true }
zip = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
pexrc-build-system = { path = "../pexrc-build-system" }