[package]
name = "resources"
edition = "2024"

[features]
embedded = []

[dependencies]
anyhow = { workspace = true}
strum = { workspace = true }
strum_macros = { workspace = true }
zip = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
pexrc-build-system = { path = "../pexrc-build-system" }