[package]
name = "scripts"
edition = "2024"

[features]
embedded = []

[dependencies]
anyhow = { workspace = true}
fs-err = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
zip = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
build-system = { path = "../build-system" }
env_logger = { workspace = true }
fs-err = { workspace = true }