# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "scripts"
edition = "2024"
publish = false

[features]
embedded = []

[dependencies]
anyhow = { workspace = true}
fs-err = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
zip = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
build-system = { path = "../build-system" }
env_logger = { workspace = true }
fs-err = { workspace = true }