[package]
name = "testing"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
ctor = { workspace = true }
fs-err = { workspace = true }
resources = { path = "../resources", features = ["embedded"] }
rstest = { workspace = true }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
