[package]
name = "testing"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
ctor = { workspace = true }
fs-err = { workspace = true }
rstest = { workspace = true }
scripts = { path = "../scripts", features = ["embedded"] }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
