# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "testing"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
ctor = { workspace = true }
fs-err = { workspace = true }
rstest = { workspace = true }
scripts = { path = "../scripts", features = ["embedded"] }
target-lexicon = { workspace = true }
tempfile = { workspace = true }
