# Copyright 2026 Pex project contributors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tools"
edition = "2024"
version = "0.1.0"
publish = false

[dependencies]
anyhow = { workspace = true }
cache = { path = "../cache" }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
cli = { path = "../cli" }
colorchoice-clap = { workspace = true }
dot-generator = { workspace = true }
dot-structures = { workspace = true }
fs-err = { workspace = true }
graphviz-rust = { workspace = true }
indexmap = { workspace = true }
interpreter = { path = "../interpreter" }
log = { workspace = true }
logging = { path = "../logging" }
logging_timer = { workspace = true }
open = { workspace = true }
owo-colors = { workspace = true }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
pex = { path = "../pex" }
rayon = { workspace = true }
scripts = { path = "../scripts" }
shell-quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
textwrap = { workspace = true }
venv = { path = "../venv" }
zip = { workspace = true }
url = { workspace = true }